adding REST endpoint to get stratunit for province, find-at-location returns province feature
